dpkg (1.16.3) UNRELEASED; urgency=low

  [ Guillem Jover ]
  * Do not look for newline beyond the read buffer on dpkg-deb extract.
  * Check update-alternative name and link arguments for all commands.
    Closes: #665050
  * Check all dpkg-divert filename arguments to be absolute and to not
    contain newlines. Closes: #21722

  [ Updated dpkg translations ]
  * French (Christian Perrier)
  * German (Sven Joachim).

  [ Updated dselect translations ]
  * German (Sven Joachim).
  * French (Christian Perrier)

  [ Updated scripts translations ]
  * French (Christian Perrier)

 -- Guillem Jover <guillem@debian.org>  Mon, 19 Mar 2012 09:53:29 +0100

dpkg (1.16.2) unstable; urgency=low

  [ Guillem Jover ]
  * Move <config.h> and <compat.h> to the top of trigdeferred.l to properly
    use the configured features and compat code.
  * Honour --disable-nls when the system lacks obstack support, by updating
    the obstack compat module from gnulib.
  * Link the libdpkg unit tests with libcompat and libintl, so that systems
    needing them will compile correctly.
  * Check for the presence of the strnlen declaration and correctly provide
    the compat one in case the systems lacks it.
  * Do not assume existence of paths on the build system in the test suite.
  * Do not fail to link dselect on MacOS X when using --disable-nls.
  * Remove versioned coreutils Pre-Depends from dpkg due to the ancient
    md5sum transition. Reported by Bill Allombert <ballombe@debian.org>.
    Closes: #643746
  * Change dpkg-architecture to only compute the requested variables. This:
    - Fixes the bootstrapping problem, as the dpkg build system only needs
      the host architecture, for which dpkg itself is not required.
    - Reduces the amount of work performed, including loading and parsing
      unnecessary table files or calling either of gcc or dpkg programs.
  * Improve error message in dpkg-gencontrol and dpkg-gensymbols when