@@ -6,6 +6,8 @@ dpkg (1.16.3) UNRELEASED; urgency=low
     Closes: #665050
   * Check all dpkg-divert filename arguments to be absolute and to not
     contain newlines. Closes: #21722
+  * Print errors while reading the file list files on a new line instead
+    of just after the progress percentage. Closes: #552517
 
   [ Updated dpkg translations ]
   * French (Christian Perrier)
